# fuel-agent-kit-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  lending_example.py  swap_example.py
fuel_agent/: __init__.py  agent.py  constants.py  fuel_agent.py  tools.py  types.py
fuel_agent/mira/: __init__.py  add_liquidity.py  swap.py
fuel_agent/read/: __init__.py  balance.py
fuel_agent/swaylend/: __init__.py  borrow.py  supply.py
fuel_agent/transfers/: __init__.py  transfers.py
fuel_agent/utils/: __init__.py  models.py
tests/: __init__.py  test_fuel_agent.py
